# coursework_7

./: .coveragerc  .dockerignore  .env.docker.template  .env.template  .flake8  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  startup.sh
app_accounts/: pagination.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  view.py
app_accounts/serializers/: __init__.py  user_public_serializer.py  user_serializer.py
app_habits/: admin.py  forms.py  pagination.py  serializers.py  tasks.py  tests.py  urls.py  views.py
app_habits/migrations/: 0001_initial.py  0002_habitnotification.py  0003_alter_habit_periodic.py
app_habits/models/: __init__.py  habit_model.py  habit_notification_model.py
app_habits/serializers/: __init__.py  habit_notification_serializer.py  habit_serializer.py  start_notification_serializer.py
app_habits/tests/: __init__.py  habit_notification_tests.py  habit_tests.py
app_social_auth/: apps.py  urls.py  utils.py  views.py
app_telegrambot/: admin.py  apps.py  message_text.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
app_telegrambot/bot_commands/: cancel_command.py  create_command.py  genpass_command.py  getjwt_command.py  link_command.py  start_command.py
app_telegrambot/management/: utils.py
app_telegrambot/management/commands/: grantrights.py  telegrampoll.py  telegramwebhookinit.py
app_telegrambot/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py  yasg.py
templates/common/: home.html
templates/registration/: login.html
